Fourth version: 1. Added SQLite database: create, modify, delete chain length calculation, add bike description and photo. 2. Added PDF creator. 3. Removed language change. 4. Visual changes.

--- a/app/src/main/res/layout/chainset_popup.xml
+++ b/app/src/main/res/layout/chainset_popup.xml
@@ -9,6 +9,6 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/chainset2" />
+        android:background="@drawable/chainset2" />
 
 </RelativeLayout>
