--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#005185</color>
     <color name="colorPrimaryDark">#003857</color>
-    <color name="colorAccent">#1b60d8</color>
+    <color name="colorAccent">#1B60D8</color>
 </resources>
