--- a/app/src/main/res/layout/suport_hub_popup.xml
+++ b/app/src/main/res/layout/suport_hub_popup.xml
@@ -9,6 +9,6 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bike2" />
+        android:background="@drawable/bike2" />
 
 </RelativeLayout>
